fix: Update profile image source from photo.jpg to Owner_img.jpeg

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ emailjs.init("yInfKq3RKqNrQCrdU");
               <a href=""  class="btn">Download CV</a>
             </div>
             <div class="home-img padd-15">
-              <img src="images/photo.jpg" alt="mypic">
+              <img src="images/Owner_img.jpeg" alt="mypic">
             </div>
           </div>
         </div>
